UPDATE INDEX VIA GITHUB

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>
-            Ini contoh Index
+            Update Index via GITHUB
         </h1>
     </body>
 </html>
