Update yang kedua

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>
-            Update Index via GITHUB
+            Update Index via GITHUB kedua
         </h1>
     </body>
 </html>
