melakukan perubahan pada index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <body>
         <h1>
             Update Index via GITHUB
+            Ini kita update dari lokal
         </h1>
     </body>
 </html>
