membenahi conflict index

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
             Update Index via GITHUB
             Ini kita update dari lokal
             Update Index via GITHUB kedua
-<<<<<<< Updated upstream
-=======
             Ini ada tambahan stash
->>>>>>> Stashed changes
+            <!-- BARIS TAMBAHAN STASH -->
         </h1>
     </body>
 </html>
